@@ -31,6 +31,7 @@ export(temporalComposite)
 export(transDate)
 export(whittaker.raster)
 exportClasses(MODISextent)
+exportClasses(MODISfile)
 exportClasses(MODISproduct)
 if (.Platform$OS.type=="windows") importFrom(utils,shortPathName)
 
