@@ -7,14 +7,17 @@
 #' @param x \code{character}. MODIS filename, product name, regular expression 
 #' passed to \code{pattern} in \code{\link{grep}}, or missing.
 #' @param quiet \code{logical}, defaults to \code{FALSE}.
+#' @param ... Additional arguments passed to \code{\link[MODIS]{getCollection}}.
 #' 
 #' @return 
-#' An invisible \code{list} with information usable by other functions or, if 
-#' 'x' is missing, a \code{data.frame} with information about all products 
-#' available.
+#' If 'x' is missing, a \code{data.frame} with information about all MODIS 
+#' products available. In case of \code{character} input, an invisible 
+#' \code{\link{MODISproduct-class}} or \code{\link{MODISfile-class}} object 
+#' depending on the type of input (product/regular expression or filename); the 
+#' object holds information usable by other functions. 
 #' 
 #' @author 
-#' Matteo Mattiuzzi
+#' Matteo Mattiuzzi and Florian Detsch
 #' 
 #' @examples 
 #' getProduct() # list available products
@@ -27,9 +30,13 @@
 #' internal_info <- getProduct("MOD11C3", quiet = TRUE) 
 #' internal_info
 #' 
+#' # or use a valid filename
+#' fileinfo <- getProduct("MYD11A1.A2009001.h18v04.006.2015363221538.hdf")
+#' fileinfo
+#' 
 #' @export getProduct
 #' @name getProduct
-getProduct <- function(x=NULL,quiet=FALSE) 
+getProduct <- function(x = NULL, quiet = FALSE, ...) 
 {    
 
 #load(system.file("external", "MODIS_Products.RData", package="MODIS"))
@@ -53,7 +60,7 @@ getProduct <- function(x=NULL,quiet=FALSE)
     inbase  <- basename(x) # if x is a filename(+path) remove the path
     
     isProduct = any(sapply(inbase, function(i) {
-      grepl(gsub(" ", "", i), getProduct()[, 2])
+      grepl(gsub(" ", "", i), getProduct()[, 1])
     }))
     
     tmp = if (!isProduct) {
@@ -68,9 +75,10 @@ getProduct <- function(x=NULL,quiet=FALSE)
     
     pattern <- sub(pattern="MXD", replacement="M.D", x=product, ignore.case=TRUE) # make a regEx out of "x"
     info <- listPather(MODIS_Products, 
-                       grep(paste(pattern, collapse = "|")
-                            , MODIS_Products$PRODUCT,ignore.case=TRUE))
-
+                       sapply(pattern, function(i) {
+                         grep(i, MODIS_Products$PRODUCT, ignore.case = TRUE)
+                       }))
+    
     if (length(info$PRODUCT) == 0) {
       if (!quiet)
         cat("No product found with the name ", inbase
@@ -84,14 +92,28 @@ getProduct <- function(x=NULL,quiet=FALSE)
     if (isFile)
     { # in this case it must be a filename
 
-      names(x) = "request"
       fname = getInfo(x, product = info$PRODUCT, type = info$TYPE)
       result <- c(x, fname, info)
       result <- result[!duplicated(names(result))]
-      result <- as.list(sapply(result,function(x)as.character(x)))
       
-      return(invisible(result))  
-      
+      out = methods::new("MODISfile"
+                         , request = x
+                         , PRODUCT = fname$PRODUCT
+                         , DATE = fname$DATE
+                         , TILE = fname$TILE
+                         , CCC = fname$CCC
+                         , PROCESSINGDATE = fname$PROCESSINGDATE
+                         , FORMAT = fname$FORMAT
+                         , PLATFORM = info$PLATFORM
+                         , PF1 = info$PF1
+                         , PF2 = info$PF2
+                         , PF3 = info$PF3
+                         , PF4 = info$PF4
+                         , TYPE = result$TYPE
+                         , SOURCE = result$SOURCE
+                         , POS1 = as.integer(result$POS1)
+                         , POS2 = as.integer(result$POS2))
+
     } else  # if not a file
     {
         if (!quiet) 
@@ -104,22 +126,24 @@ getProduct <- function(x=NULL,quiet=FALSE)
 
       PD <- substr(info$PRODUCT, 4, nchar(as.character(info$PRODUCT)))
       
-      return(
-        invisible(
-          methods::new("MODISproduct"
-                       , request = inbase
-                       , PF1 = as.character(info$PF1)
-                       , PF2 = as.character(info$PF2)
-                       , PF3 = as.character(info$PF3)
-                       , PF4 = as.character(info$PF4)
-                       , PD = PD
-                       , PLATFORM = as.character(info$PLATFORM)
-                       , TYPE = as.character(info$TYPE)
-                       , PRODUCT = as.character(info$PRODUCT)
-                       , SOURCE=info$SOURCE)
-        )
+      out = methods::new("MODISproduct"
+                         , request = inbase
+                         , PF1 = as.character(info$PF1)
+                         , PF2 = as.character(info$PF2)
+                         , PF3 = as.character(info$PF3)
+                         , PF4 = as.character(info$PF4)
+                         , PD = PD
+                         , PLATFORM = as.character(info$PLATFORM)
+                         , TYPE = as.character(info$TYPE)
+                         , PRODUCT = as.character(info$PRODUCT)
+                         , SOURCE = info$SOURCE
       )
+      
+      out@CCC = getCollection(out, quiet = quiet, ...)
     }
+    
+    names(out@SOURCE) = out@PRODUCT
+    return(invisible(out))
 }
 
 
